--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mean-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "TDD app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,5 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2"
   }
 }
