--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "TDD app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js"
   },
   "author": "chao wei chiu",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "request": "^2.75.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
