--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "mongoose": "^4.6.3",
     "request": "^2.75.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.1.2"
+    "co-mocha": "^1.1.3",
+    "mocha": "^3.1.2",
+    "nock": "^8.1.0"
   }
 }
