--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "mongoose": "^4.6.3",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
