--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TDD app",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --recursive --watch",
     "start": "node server.js"
   },
   "author": "chao wei chiu",
@@ -14,7 +14,11 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "mongoose": "^4.6.3",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "request": "^2.75.0",
     "underscore": "^1.8.3"
   },
